--- a/blacksea.html
+++ b/blacksea.html
@@ -7,8 +7,8 @@
   </head>
   <body>
 
-    <div class="rel-nav rel-nav-left"><a href="sport.html"><img src="img/designer/left.svg"></a></div>
-    <div class="rel-nav rel-nav-right"><a href="shop.html"><img src="img/designer/right.svg"></a></div>
+    <div class="rel-nav rel-nav-left"><a href="skate.html"><img src="img/designer/left.svg"></a></div>
+    <div class="rel-nav rel-nav-right"><a href="skalka.html"><img src="img/designer/right.svg"></a></div>
     
     <div class="header">
       <a href="index.html?designer">
