--- a/im.html
+++ b/im.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/designer.css">
     <meta charset="utf-8">
   </head>
-    <div class="rel-nav rel-nav-left"><a href="nyash.html"><img src="img/designer/left.svg"></a></div>
+    <div class="rel-nav rel-nav-left"><a href="stickers.html"><img src="img/designer/left.svg"></a></div>
     <div class="rel-nav rel-nav-right"><a href="sport.html"><img src="img/designer/right.svg"></a></div>
 
   <body>
