--- a/index.html
+++ b/index.html
@@ -64,6 +64,32 @@
                 </div>
                 <div class="col-item">
                     <div class="col-item-hover">
+                        <a href="beru.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-29.jpg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Беру!</h1>
+                                    <div>Презентация и лэндинг</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            <div class="col-item">
+               <div class="col-item-hover">
+                 <a href="nyash.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-21.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Хостел в Симферополе</h1>
+                                    <div>Баннеры</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-item">
+                    <div class="col-item-hover">
                         <a href="stickers.html">
                             <img class="col-item-image" src="img/designer_columns/logos-22.svg" />
                             <div class="col-item-descr">
@@ -75,24 +101,12 @@
                         </a>
                     </div>
                 </div>
+
                 <!-- col-1 end -->
             </td>
             <td>
                 
                 <!-- second column -->
-            <div class="col-item">
-                    <div class="col-item-hover">
-                        <a href="nyash.html">
-                            <img class="col-item-image" src="img/designer_columns/logos-21.svg" />
-                            <div class="col-item-descr">
-                                <div class="col-item-text">
-                                    <h1>Хостел в Симферополе</h1>
-                                    <div>Баннеры</div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
                 <div class="col-item">
                     <div class="col-item-hover">
                         <a href="im.html">
@@ -106,6 +120,7 @@
                         </a>
                     </div>
                 </div>
+            
                 <div class="col-item">
                     <div class="col-item-hover">
                         <a href="sport.html">
@@ -114,6 +129,19 @@
                                 <div class="col-item-text">
                                     <h1>Спортивный магазин</h1>
                                     <div>Иконки</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="skate.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-28.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Спортивный магазин</h1>
+                                    <div>Иллюстрация</div>
                                 </div>
                             </div>
                         </a>
@@ -132,6 +160,32 @@
                         </a>
                     </div>
                 </div>
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="skalka.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-30.png" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Мобильное приложение «Skalka»</h1>
+                                    <div>Идея и прототип</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>  
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="lg.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-31.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Логотипы компаний</h1>
+                                    <div></div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>   
                 <!-- col-2 end -->
             </td>
             <td>
@@ -202,6 +256,10 @@
                     </div>
                 </div>
                 <!-- col-3 end -->
+
+                 <div class="centered-block-narrow">
+                    <img src="img/designer/footer-01.svg"/>
+                 </div>
             </td>
             </tr>
         </table>
