--- a/skate.html
+++ b/skate.html
@@ -1,13 +1,13 @@
 <html>
   <head>
-    <title>Спортивный магазин / Иконки</title>
+    <title>Интернет-магазин / Иллюстрации</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/designer.css">
     <meta charset="utf-8">
   </head>
 
-  <div class="rel-nav rel-nav-left"><a href="im.html"><img src="img/designer/left.svg"></a></div>
-  <div class="rel-nav rel-nav-right"><a href="skate.html"><img src="img/designer/right.svg"></a></div>
+  <div class="rel-nav rel-nav-left"><a href="sport.html"><img src="img/designer/left.svg"></a></div>
+  <div class="rel-nav rel-nav-right"><a href="blacksea.html"><img src="img/designer/right.svg"></a></div>
 
 
   <body>
@@ -18,20 +18,22 @@
       </a>
     </div>
     
-    <h1 class="centered-block main-inner-header-top-z2r4g">А где консультант?</h1>
+    <h1 class="centered-block main-inner-header-top-z2r4g">Доски и педали</h1>
 
     <div class="centered-block heart">
       <img style="width:2%;"  src="img/designer/heart.png"/>
     </div>
 
     <div class="centered-block centered-text">
-      Ледорубы на втором этаже слева от лестницы!
+ Иллюстрация для страниц спортивного магазина на Вконтакте и Facebook.
     </div>
     
 
-    <div class="centered-block-narrow">
-       <img src="img/designer/sport-01.svg"/>
+    <div class="centered-block-white">
+       <img src="img/designer/skate-01.svg"/>
     </div>
+
+
 
 
     <div id="footer">
