--- a/dogs.html
+++ b/dogs.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
   </head>
     <div class="rel-nav rel-nav-left"><a href="unicorn.html"><img src="img/designer/left.svg"></a></div>
-    <div class="rel-nav rel-nav-right"><a href="stickers.html"><img src="img/designer/right.svg"></a></div>
+    <div class="rel-nav rel-nav-right"><a href="beru.html"><img src="img/designer/right.svg"></a></div>
 
   <body>
 
