--- a/nyash.html
+++ b/nyash.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="css/designer.css">
     <meta charset="utf-8">
   </head>
-    <div class="rel-nav rel-nav-left"><a href="stickers.html"><img src="img/designer/left.svg"></a></div>
-    <div class="rel-nav rel-nav-right"><a href="im.html"><img src="img/designer/right.svg"></a></div>
+    <div class="rel-nav rel-nav-left"><a href="beru.html"><img src="img/designer/left.svg"></a></div>
+    <div class="rel-nav rel-nav-right"><a href="stickers.html"><img src="img/designer/right.svg"></a></div>
 
   <body>
 
