--- a/skalka.html
+++ b/skalka.html
@@ -6,6 +6,11 @@
     <meta charset="utf-8">
   </head>
   <body>
+
+  <div class="rel-nav rel-nav-left"><a href="blacksea.html"><img src="img/designer/left.svg"></a></div>
+  <div class="rel-nav rel-nav-right"><a href="lg.html"><img src="img/designer/right.svg"></a></div> 
+
+
     <div class="header">
       <a href="index.html?designer">
         <img src="img/designer/name.png" class="header"/>
