--- a/index.html
+++ b/index.html
@@ -256,12 +256,11 @@
                     </div>
                 </div>
                 <!-- col-3 end -->
-
-                 <div class="centered-block-narrow">
-                    <img src="img/designer/footer-01.svg"/>
-                 </div>
             </td>
             </tr>
         </table>
+         <div class="centered-block-narrow" style="text-align: center;">
+            <img style="width:10%;" src="img/designer/footer-01.svg"/>
+         </div>
     </body>
 </html>
