--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <h1>Привет!</h1>
                         
                         <div>
-                            Меня зовут Света, и я дизайнер. Я исследую, проектирую и рисую.<br/>
+                            Меня зовут Света, и я дизайнер. Я рисую, исследую и проектирую.<br/>
                             Со мной можно связаться, написав на почту <a href="mailto:zvuki.u@gmail.com">zvuki.u@gmail.com</a>
                         </div>
                     </div>
