--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="col-item">
                     <div class="col-item-hover">
                         <a href="yoga.html">
@@ -31,6 +32,19 @@
                                 <div class="col-item-text">
                                     <h1>Йога</h1>
                                     <div>Серия иллюстраций</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="kamchatka.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-34.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Проект по сохранению Камчатки</h1>
+                                    <div>Открытка</div>
                                 </div>
                             </div>
                         </a>
@@ -109,12 +123,12 @@
                 <!-- second column -->
                 <div class="col-item">
                     <div class="col-item-hover">
-                        <a href="im.html">
-                            <img class="col-item-image" src="img/designer_columns/logos-19.svg" />
+                        <a href="new_year.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-33.png" />
                             <div class="col-item-descr">
                                 <div class="col-item-text">
-                                    <h1>Школа интернет-маркетинга</h1>
-                                    <div>Баннеры</div>
+                                    <h1>Happy New 2020 Year</h1>
+                                    <div>Иллюстрация</div>
                                 </div>
                             </div>
                         </a>
@@ -186,10 +200,36 @@
                         </a>
                     </div>
                 </div>   
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="portrait.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-35.png" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Портреты</h1>
+                                    <div>В векторе и растре</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>  
                 <!-- col-2 end -->
             </td>
             <td>
                 <!-- third column -->
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="idea.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-32.png" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Как рождаются идеи</h1>
+                                    <div>Иллюстрация</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
                 <div class="col-item">
                     <div class="col-item-hover">
                         <a href="shop.html">
@@ -197,6 +237,19 @@
                             <div class="col-item-descr">
                                 <div class="col-item-text">
                                     <h1>Интернет-магазины в социальных сетях</h1>
+                                    <div>Баннеры</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-item">
+                    <div class="col-item-hover">
+                        <a href="im.html">
+                            <img class="col-item-image" src="img/designer_columns/logos-19.svg" />
+                            <div class="col-item-descr">
+                                <div class="col-item-text">
+                                    <h1>Школа интернет-маркетинга</h1>
                                     <div>Баннеры</div>
                                 </div>
                             </div>
