--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <div class="col-item">
                     <div class="col-item-hover">
                         <a href="new_year.html">
-                            <img class="col-item-image" src="img/designer_columns/logos-33.png" />
+                            <img class="col-item-image" src="img/designer_columns/logos-33.jpg" />
                             <div class="col-item-descr">
                                 <div class="col-item-text">
                                     <h1>Happy New 2020 Year</h1>
