--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <div class="col-item">
                     <div class="col-item-hover">
                         <a href="portrait.html">
-                            <img class="col-item-image" src="img/designer_columns/logos-35.png" />
+                            <img class="col-item-image" src="img/designer_columns/logos-35.jpg" />
                             <div class="col-item-descr">
                                 <div class="col-item-text">
                                     <h1>Портреты</h1>
