--- a/stickers.html
+++ b/stickers.html
@@ -7,7 +7,7 @@
   </head>
 
   <div class="rel-nav rel-nav-left"><a href="nyash.html"><img src="img/designer/left.svg"></a></div>
-  <div class="rel-nav rel-nav-right"><a href="im.html"><img src="img/designer/right.svg"></a></div>
+  <div class="rel-nav rel-nav-right"><a href="new_year.html"><img src="img/designer/right.svg"></a></div>
 
 
   <body>
