--- a/new_year.html
+++ b/new_year.html
@@ -26,7 +26,7 @@
     </div>
     
 
-    <div class="centered-block">
+    <div class=<div class="centered-block" style="width: 50%;">>
       <img src="img/designer/ski.jpg"/><br/>
     </div>
 
