--- a/new_year.html
+++ b/new_year.html
@@ -26,7 +26,7 @@
     </div>
     
 
-    <div class="centered-block" style="height: 100%;">
+    <div class="centered-block">
       <img src="img/designer/ski.jpg"/><br/>
     </div>
 
