--- a/kamchatka.html
+++ b/kamchatka.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Йога / Серия иллюстраций</title>
+    <title>Береги Камчатку / Открытка</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/designer.css">
     <meta charset="utf-8">
