--- a/unicorn.html
+++ b/unicorn.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/designer.css">
     <meta charset="utf-8">
   </head>
-    <div class="rel-nav rel-nav-left"><a href="yoga.html"><img src="img/designer/left.svg"></a></div>
+    <div class="rel-nav rel-nav-left"><a href="kamchatka.html"><img src="img/designer/left.svg"></a></div>
     <div class="rel-nav rel-nav-right"><a href="dogs.html"><img src="img/designer/right.svg"></a></div>
 
   <body>
