--- a/kamchatka.html
+++ b/kamchatka.html
@@ -16,14 +16,14 @@
       </a>
     </div>
     
-    <h1 class="centered-block main-inner-header-top-z2r4g">Мишка, плюшевый мишка</h1>
+    <h1 class="centered-block main-inner-header-top-z2r4g">Береги Камчатку</h1>
 
     <div class="centered-block heart">
       <img style="width:2%;"  src="img/designer/heart.png"/>
     </div>
 
     <div class="centered-block centered-text">
-      Открытки-вложения – маленькое благодарственное "Ррр!" от жителей Камчатки и создателей проекта.
+      Открытки-вложения – маленькое благодарственное «Ррр!» от жителей Камчатки и создателей проекта.
     </div>
     
 
