--- a/three_columns.html
+++ b/three_columns.html
@@ -36,13 +36,13 @@
       </div>
       <div class="pad-bottom-medium">
         <img src="img/designer/shop-01.jpg" class="three-images-first" style="width:10%;" />
-        <img src="img/designer/shop-02.jpg" class="three-images-second" style="width:83%;" />
+        <img src="img/designer/shop-02.jpg" class="three-images-second" style="width:73%;" />
         <img src="img/designer/shop-03.jpg" class="three-images-last" style="width:10%;" />
      </div>
      <div class="pad-bottom-medium">
-        <img src="img/designer/shop-01.jpg" class="three-images-first" style="width:10%; padding:0;" />
-        <img src="img/designer/shop-02.jpg" class="three-images-second" style="width:83%; padding:0;" />
-        <img src="img/designer/shop-03.jpg" class="three-images-last" style="width:10%; padding:0;" />
+        <img src="img/designer/shop-04.jpg" class="three-images-first" style="width:10%; padding:0;" />
+        <img src="img/designer/shop-05.svg" class="three-images-second" style="width:73%; padding:0;" />
+        <img src="img/designer/shop-06.svg" class="three-images-last" style="width:10%; padding:0;" />
      </div>
     </div>
       
