three cols vertical align

--- a/three_columns.html
+++ b/three_columns.html
@@ -35,9 +35,9 @@
         <img src="img/designer/shop-03.jpg" class="three-images-last" />
       </div>
       <div class="pad-bottom-medium">
-        <img src="img/designer/shop-01.jpg" class="three-images-first" style="width:10%;" />
-        <img src="img/designer/shop-02.jpg" class="three-images-second" style="width:73%;" />
-        <img src="img/designer/shop-03.jpg" class="three-images-last" style="width:10%;" />
+        <img src="img/designer/shop-01.jpg" class="three-images-first" style="width:10%; vertical-align: middle;" />
+        <img src="img/designer/shop-02.jpg" class="three-images-second" style="width:73%; vertical-align: middle;" />
+        <img src="img/designer/shop-03.jpg" class="three-images-last" style="width:10%; vertical-align: middle;" />
      </div>
      <div class="pad-bottom-medium">
         <img src="img/designer/shop-04.jpg" class="three-images-first" style="width:10%; padding:0;" />
