--- a/lg.html
+++ b/lg.html
@@ -7,7 +7,7 @@
   </head>
 
   <div class="rel-nav rel-nav-left"><a href="skalka.html"><img src="img/designer/left.svg"></a></div>
-  <div class="rel-nav rel-nav-right"><a href="shop.html"><img src="img/designer/right.svg"></a></div>
+  <div class="rel-nav rel-nav-right"><a href="portrait.html"><img src="img/designer/right.svg"></a></div>
 
 
   <body>
