--- a/idea.html
+++ b/idea.html
@@ -29,10 +29,10 @@
     </div>
 
     <div class="centered-block">
-      <div class="pad-bottom-medium">
-        <img src="img/designer/lamp-left.gif" class="three-images-first" style="width:18%;" vertical-align: middle;"/>
-        <img src="img/designer/idea-01.jpg" class="three-images-second" style="width:50%;" vertical-align: middle;"/>
-        <img src="img/designer/lamp-right.gif" class="three-images-last" style="width:18%;" vertical-align: middle;"/>
+     <div class="pad-bottom-medium">
+        <img src="img/designer/lamp-left.gif" class="three-images-first" style="width:18%; vertical-align: middle;" />
+        <img src="img/designer/idea-01.jpg" class="three-images-second" style="width:55%; vertical-align: middle;" />
+        <img src="img/designer/lamp-right.gif" class="three-images-last" style="width:18%; vertical-align: middle;" />
      </div>
     </div>
       
