--- a/sport.html
+++ b/sport.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
   </head>
 
-  <div class="rel-nav rel-nav-left"><a href="im.html"><img src="img/designer/left.svg"></a></div>
+  <div class="rel-nav rel-nav-left"><a href="new_year.html"><img src="img/designer/left.svg"></a></div>
   <div class="rel-nav rel-nav-right"><a href="skate.html"><img src="img/designer/right.svg"></a></div>
 
 
