--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
   </head>
 
-  <div class="rel-nav rel-nav-left"><a href="blacksea.html"><img src="img/designer/left.svg"></a></div>
+  <div class="rel-nav rel-nav-left"><a href="idea.html"><img src="img/designer/left.svg"></a></div>
   <div class="rel-nav rel-nav-right"><a href="hands.html"><img src="img/designer/right.svg"></a></div>
 
 
