--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <img class="col-item-image" src="img/designer_columns/logos-34.svg" />
                             <div class="col-item-descr">
                                 <div class="col-item-text">
-                                    <h1>Проект по сохранению Камчатки</h1>
+                                    <h1>Береги камчатку</h1>
                                     <div>Открытка</div>
                                 </div>
                             </div>
