--- a/portrait.html
+++ b/portrait.html
@@ -30,6 +30,7 @@
     <div class="centered-block">
       <img src="img/designer/p-01.jpg" style="width:60%;" /><br/>
       <img src="img/designer/p-02.jpg" style="width:60%;"/><br/>
+      <img src="img/designer/p-04.jpg" style="width:60%;"/><br/>
       <img src="img/designer/p-03.jpg" style="width:60%;"/><br/>
     </div>
 
