--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Tulenina, Super Giggle</title>
+        <title>Sveta Tulenina / Portfolio</title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/designer_columns.css">
         <meta charset="utf-8">
