--- a/beru.html
+++ b/beru.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Беру! / Презентация и лэндинг/title>
+    <title>Беру / Презентация и лэндинг</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/designer.css">
     <meta charset="utf-8">
@@ -31,7 +31,7 @@
    <div class="centered-block centered-text"><span class="f-bold">Что сделано:</span></div>
 
     <div class="centered-block centered-text">
-    Разработка дополнительной функциональности / Презентация / Лэндинг
+    Разработка дополнительной функциональности / Презeнтация / Лэндинг
     </div>
 
     <div class="centered-block-white">
