new design with two cols

--- a/blacksea.html
+++ b/blacksea.html
@@ -7,14 +7,18 @@
   </head>
   <body>
 
-    <div class="rel-nav rel-nav-left"><a href="skate.html"><img src="img/designer/left.svg"></a></div>
-    <div class="rel-nav rel-nav-right"><a href="skalka.html"><img src="img/designer/right.svg"></a></div>
+
     
     <div class="header">
-      <a href="index.html?designer">
-        <img src="img/designer/name.png" class="header"/>
-      </a>
+      <div id="navbar">
+        <a href="index.html">Главная</a>
+        <img src="img/designer_columns/logo-01.svg"/>
+        <a href="contact.html">Контакты</a>
+      </div> 
     </div>
+
+    <div id="header-clear"></div>
+    
 
     <h1 class="centered-block main-inner-header-top-z2r4g">Синее, синее море</h1>
 
@@ -35,7 +39,7 @@
     </div>
 
     <div id="footer">
-        Светлана Храмчихина, <a href="mailto:zvuki.u@gmail.com">zvuki.u@gmail.com</a>
+        <a href="mailto:zvuki.u@gmail.com">zvuki.u@gmail.com</a>
     </div>
   </body>
 </html>
