--- a/hands.html
+++ b/hands.html
@@ -6,15 +6,19 @@
     <meta charset="utf-8">
   </head>
 
-  <div class="rel-nav rel-nav-left"><a href="shop.html"><img src="img/designer/left.svg"></a></div>
-  <div class="rel-nav rel-nav-right"><a href="birds.html"><img src="img/designer/right.svg"></a></div>
+
 
   <body>
     <div class="header">
-      <a href="index.html?designer">
-        <img src="img/designer/name.png" class="header"/>
-      </a>
+      <div id="navbar">
+        <a href="index.html">Главная</a>
+        <img src="img/designer_columns/logo-01.svg"/>
+        <a href="contact.html">Контакты</a>
+      </div> 
     </div>
+
+    <div id="header-clear"></div>
+    
     
     <h1 class="centered-block">Рисунки на бумаге от руки</h1>
 
@@ -40,7 +44,7 @@
     <div class="centered-block hands"><img src="img/designer/hand-04.jpg"/></div>
 
     <div id="footer">
-        Светлана Храмчихина, <a href="mailto:zvuki.u@gmail.com">zvuki.u@gmail.com</a>
+        <a href="mailto:zvuki.u@gmail.com">zvuki.u@gmail.com</a>
     </div>
   </body>
 </html>
