--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
         <meta charset="utf-8">
     </head>
     <body>
+        
         <div class="header">
-            <img src="img/designer/name.png" class="header"/>
+            <div id="navbar">
+                <a href="index.html">Главная</a>
+                <img src="img/designer_columns/logo-01.svg"/>
+                <a href="contact.html">Контакты</a>
+            </div> 
         </div>
+
         <table class="main-cols">
             <tr>
             <td>
