--- a/new_year.html
+++ b/new_year.html
@@ -5,34 +5,35 @@
     <link rel="stylesheet" href="css/designer.css">
     <meta charset="utf-8">
   </head>
-    <div class="rel-nav rel-nav-left"><a href="stickers.html"><img src="img/designer/left.svg"></a></div>
-    <div class="rel-nav rel-nav-right"><a href="sport.html"><img src="img/designer/right.svg"></a></div>
+
 
   <body>
 
     <div class="header">
-      <a href="index.html?designer">
-        <img src="img/designer/name.png" class="header"/>
-      </a>
+      <div id="navbar">
+        <a href="index.html">Главная</a>
+        <img src="img/designer_columns/logo-01.svg"/>
+        <a href="contact.html">Контакты</a>
+      </div> 
     </div>
+
+    <div id="header-clear"></div>
+
+    <table class="centered-block">
+      <tr>
+        <td style="width:7%;"></td>
+        <td style="width:20%;vertical-align: top;text-align:left;">
+          <h1 style="padding-left:0;margin-top:0;padding-top:0;" class="main-inner-header-top-z2r4g">Let It Snow!</h1>
+          <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </td>
+        <td style="width:62%"><img style="width:100%" src="img/designer/ski.jpg"/></td>
+      </tr>
+    </table>
     
-    <h1 class="centered-block main-inner-header-top-z2r4g">Let It Snow!</h1>
-
-    <div class="centered-block heart">
-      <img style="width:2%;"  src="img/designer/heart.png"/>
-    </div>
-
-    <div class="centered-block centered-text"> 
-    </div>
-    
-
-    <div class="centered-block">
-      <img src="img/designer/ski.jpg"/><br/>
-    </div>
-
-
     <div id="footer">
-        Светлана Храмчихина, <a href="mailto:zvuki.u@gmail.com">zvuki.u@gmail.com</a>
+        <a href="mailto:zvuki.u@gmail.com">zvuki.u@gmail.com</a>
     </div>
   </body>
 </html>
