--- a/nyash.html
+++ b/nyash.html
@@ -5,16 +5,20 @@
     <link rel="stylesheet" href="css/designer.css">
     <meta charset="utf-8">
   </head>
-    <div class="rel-nav rel-nav-left"><a href="beru.html"><img src="img/designer/left.svg"></a></div>
-    <div class="rel-nav rel-nav-right"><a href="stickers.html"><img src="img/designer/right.svg"></a></div>
+
 
   <body>
 
     <div class="header">
-      <a href="index.html?designer">
-        <img src="img/designer/name.png" class="header"/>
-      </a>
+      <div id="navbar">
+        <a href="index.html">Главная</a>
+        <img src="img/designer_columns/logo-01.svg"/>
+        <a href="contact.html">Контакты</a>
+      </div> 
     </div>
+
+    <div id="header-clear"></div>
+    
     
     <h1 class="centered-block main-inner-header-top-z2r4g">Няш</h1>
 
@@ -32,7 +36,7 @@
 
 
     <div id="footer">
-        Светлана Храмчихина, <a href="mailto:zvuki.u@gmail.com">zvuki.u@gmail.com</a>
+        <a href="mailto:zvuki.u@gmail.com">zvuki.u@gmail.com</a>
     </div>
   </body>
 </html>
