--- a/skalka.html
+++ b/skalka.html
@@ -7,15 +7,19 @@
   </head>
   <body>
 
-  <div class="rel-nav rel-nav-left"><a href="blacksea.html"><img src="img/designer/left.svg"></a></div>
-  <div class="rel-nav rel-nav-right"><a href="lg.html"><img src="img/designer/right.svg"></a></div> 
+ 
 
 
     <div class="header">
-      <a href="index.html?designer">
-        <img src="img/designer/name.png" class="header"/>
-      </a>
+      <div id="navbar">
+        <a href="index.html">Главная</a>
+        <img src="img/designer_columns/logo-01.svg"/>
+        <a href="contact.html">Контакты</a>
+      </div> 
     </div>
+
+    <div id="header-clear"></div>
+    
     <h1 class="centered-block main-inner-header-top-z2r4g">Мобильное приложение «Skalka»</h1>
     <div class="centered-block heart">
       <img style="width:2%;"  src="img/designer/heart.png"/>
@@ -36,7 +40,7 @@
     </div>
 
     <div id="footer">
-        Светлана Храмчихина, <a href="mailto:zvuki.u@gmail.com">zvuki.u@gmail.com</a>
+        <a href="mailto:zvuki.u@gmail.com">zvuki.u@gmail.com</a>
     </div>
   </body>
 </html>
