fix header height and image

--- a/new_year.html
+++ b/new_year.html
@@ -12,7 +12,7 @@
     <div class="header">
       <div id="navbar">
         <a href="index.html">Главная</a>
-        <img src="img/designer_columns/logo-01.svg"/>
+        <img src="img/designer_new/header.png"/>
         <a href="contact.html">Контакты</a>
       </div> 
     </div>
